--- a/webUI/src/app/histogram/bar/bar.component.html
+++ b/webUI/src/app/histogram/bar/bar.component.html
@@ -1,1 +1,9 @@
-<p>bar works!</p>
+
+<div>
+    <div style="width:30px" [style.height] = "(1 - barHeight) * 200 + 'px'">
+
+    </div>
+    <div style="background:blue; width:30px" [style.height] = "(barHeight) * 200 + 'px'" title="'57'">
+
+    </div>
+</div>
