histogram enhancemants; API start

--- a/webUI/src/app/histogram/bar/bar.component.html
+++ b/webUI/src/app/histogram/bar/bar.component.html
@@ -3,7 +3,7 @@
     <div style="width:30px" [style.height] = "(1 - barHeight) * 200 + 'px'">
 
     </div>
-    <div style="background:blue; width:30px" [style.height] = "(barHeight) * 200 + 'px'" title="'57'">
+    <div style="background:blue; width:30px" [style.height] = "(barHeight) * 200 + 'px'" title="{{barHeight}}">
 
     </div>
 </div>
