--- a/webUI/src/app/app.component.html
+++ b/webUI/src/app/app.component.html
@@ -4,5 +4,8 @@
     Welcome to OptiBus Assignment!
   </h1>  
 </div>
-<app-histogram></app-histogram>
+<div style="height: 200px;"></div>
+<div style="margin-left: 150px;">
+  <app-histogram></app-histogram>
+</div>
 <router-outlet></router-outlet>
