--- a/webUI/src/app/histogram/bar/bar.component.html
+++ b/webUI/src/app/histogram/bar/bar.component.html
@@ -1,9 +1,9 @@
 
 <div>
-    <div style="width:30px" [style.height] = "(1 - barHeight) * 200 + 'px'">
+    <div style="width:28px" [style.height] = "(1 - barHeight/factor) * 200 + 20 + 'px'">
 
     </div>
-    <div style="background:blue; width:30px" [style.height] = "(barHeight) * 200 + 'px'" title="{{barHeight}}">
+    <div style="background:blue; width:28px" [style.height] = "(barHeight/factor) * 200 + 'px'" title="{{barHeight}}">
 
     </div>
 </div>
