--- a/webUI/src/app/app.component.html
+++ b/webUI/src/app/app.component.html
@@ -5,7 +5,7 @@
   </h1>  
 </div>
 <div style="height: 200px;"></div>
-<div style="margin-left: 150px;">
+<div class="graph_wrapper">
   <app-histogram></app-histogram>
 </div>
 <router-outlet></router-outlet>
